syntax = "proto3";

import "google/protobuf/empty.proto";
import "types/types.proto";

package bundler;

enum Mode {
    AUTO = 0;
    MANUAL = 1;
}

message SetModeRequest {
    Mode mode = 1;
}

enum SetModeResult{
    OK = 0;
}

message SetModeResponse{
    SetModeResult result = 1;
}

message SendBundleNowResponse{
    types.H256 result = 1;
}


service Bundler {
    rpc ChainId(google.protobuf.Empty) returns (types.GetChainIdResponse);
    rpc SupportedEntryPoints(google.protobuf.Empty) returns (types.GetSupportedEntryPointsResponse);
    // debug
    rpc SetBundlerMode(SetModeRequest) returns (SetModeResponse);
    rpc SendBundleNow(google.protobuf.Empty) returns (SendBundleNowResponse);
}
